# lexeywan

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  book.toml  rust-toolchain.toml
css/: writeup.css
scripts/: build_writeup  install_grammars_to_writeup
src/: alignment.rs  char_sequences.rs  cleaning.rs  combination.rs  command_line.rs  comparison.rs  datatypes.rs  decl_lexing.rs  direct_lexing.rs  doc_lowering.rs  fine_tokens.rs  framework.rs  frontmatter.pest  frontmatter.rs  lex_via_peg.rs  lex_via_rustc.rs  lexlucid.rs  main.rs  proptesting.rs  regular_tokens.rs  reimplementation.rs  rustc_harness.rs  simple_reports.rs  simple_tests.rs  testcases.rs  tokens_common.rs  tree_construction.rs  tree_flattening.rs  utils.rs
src/alignment/: comparison.rs  decl_lexing.rs  direct_lexing.rs
src/datatypes/: char_sequences.rs  tree_construction.rs  tree_flattening.rs  trees.rs
src/framework/: command_line.rs  comparison.rs  proptesting.rs  simple_reports.rs  simple_tests.rs  testcases.rs
src/lex_via_peg/: pretokenisation.rs  (+4 more)
writeup/: SUMMARY.md  before_tokenising.md  common_definitions.md  complete_pretoken_grammar.md  complete_token_grammar.md  definitions.md  doc_comments.md  edition_nonterminals.md  escape_processing.md  escape_processing_grammar.md  fine_grained_tokens.md  frontmatter_grammar.md  grammars.md  identifier_pretokens.md  identifier_tokens.md  introduction.md  numeric_literal_pretokens.md  numeric_literal_tokens.md  open_questions.md  overview.md  patterns.md  pegs.md  pretokenising.md  pretokens.md  punctuation_pretokens.md  punctuation_tokens.md  quoted_literal_tokens.md  rationale.md  raw_strings.md  reimplementation_cli.md  reprocessing.md  reprocessing_cases.md  rules.md  rustc_oddities.md  string_and_byte_literal_pretokens.md  string_and_byte_literal_tokens.md  token_nonterminals.md  tokenising.md  whitespace_and_comment_pretokens.md  whitespace_and_comment_tokens.md
(+33 files in other folders)
