[package]
name = "lexeywan"
version = "0.1.0"
edition = "2021"

[package.metadata.rust-analyzer]
rustc_private=true

[dependencies]
pico-args = { version = "0.5.0", features = ["eq-separator"] }
# This version uses Unicode 16.0 for its character database
regex = "=1.11.1"
# These are the exact versions used by
# rustc 1.85.0-nightly (28fc2ba71 2024-11-24)
unicode-normalization = "=0.1.24"
unicode-xid = "=0.2.6"

[dependencies.proptest]
version = "1.4.0"
default-features = false
features = ["std", "regex-syntax", "tempfile"]

[lints.clippy]
print_with_newline = "allow"
