[package]
name = "lexeywan"
version = "0.1.0"
edition = "2021"

[package.metadata.rust-analyzer]
rustc_private=true

[dependencies]
# This version uses Unicode 16.0 for its character database
pest = "2.8.0"
pest_derive = "2.8.0"
pico-args = { version = "0.5.0", features = ["eq-separator"] }
# This version uses Unicode 16.0 for its character database
regex = "=1.11.1"
# lexlucid::analyse() checks that these supply the required Unicode version
unicode-normalization = "=0.1.24"
unicode-xid = "=0.2.6"

[dependencies.proptest]
version = "1.4.0"
default-features = false
features = ["std", "regex-syntax", "tempfile"]

[lints.clippy]
print_with_newline = "allow"
