[package]
name = "lexeywan"
version = "0.2.1"
edition = "2021"

[package.metadata.rust-analyzer]
rustc_private=true

[dependencies]
# This version uses Unicode 16.0 for its character database
pest = "2.8.0"
pest_derive = "2.8.0"
pico-args = { version = "0.5.0", features = ["eq-separator"] }
# lex_via_peg::analyse() checks that this supplies the required Unicode version
unicode-normalization = "=0.1.24"

[dependencies.proptest]
version = "1.4.0"
default-features = false
features = ["std", "tempfile"]

[lints.clippy]
print_with_newline = "allow"
